[package]
name = "sharp"
version = "0.1.0"
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]
description = "A compiler for the Sharp programming language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
nom = "7.1.1"
nom_locate = "4.0.0"
snailquote = "0.3.1"
